Minor adjustment to avoid screen cutoff

--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -30,6 +30,10 @@ Navbar
   }
 }
 
+ul.dropdown-menu-right {
+  right: 0;
+}
+
 /* ==========================================================================
 Logo styles
 ========================================================================== */
